# DEADLINE!
5월 17일 까지 제작하여 accuaracy 뽑아내기
May. 5. 2022 (B. InSung)
- Linear 모델 까지 통과, 이제 정상 비트냐 이소성 비트냐만 결과 도출하면 끝

May. 13. 2022 (B. InSung)
- First BBRBM은 작동 여부 확인. 이를 Second BBRBM까지 이어 갈수 있는지는 아직 확인중.
- Second BBRBM으로 변환 하는 과정 중에 확률 분포 에러 발생. 백업 커밋.
- 사이즈 오류로 인해 생기는 모델 input data 오류 제거.
    - Second BBRBM 레이어를 통과시키는 것을 이제 주 목적.

May. 12. 2022 (B. InSung)
- 내가 뭘 했는지는 몰라도 일단 뭐 되긴 된거 같다. 연산 중에 오류로 torch.mv 함수 내에서 벡터와 텐서 연산 오류 외에는 아직 큰 문제는 없음.
- torch.mv 함수 내에서 matmul 과정 중에서 오류 발생. 아마도 13000000 텐서와 10 벡터를 연산을 하는데 텐서를 10 * 1300000으로 맞춰 줘야하는거 같다.
    - .view(10, 1300000) 함수로 변환시 오류 없음. torch.mv 에서 적용 후 검토 예정
    RuntimeError: size mismatch, got 10, 10x1300000,10 
- 사이즈를 반대로 적용. 1300000 * 10 으로 적용하여 값 확인
    - 오류 해결됨. 커밋.
    ===============================================
- MSI 연구실 컴퓨터로 작업 시작.
    - 기존 데이터를 입력할때 맞지 않게 입력을 했음.
- 일단 first bbrbm은 확인. 전체 다 돌리고 결과를 볼 예정. 커밋.

May. 11. 2022 (B. InSung)
- 모델을 재구성하는중.
    - 기존에 모델의 가장 크나큰 문제는 일단 제대로 된 값이 하나도 없었던 거 같으며 라벨 처리를 따로 안함. 현재 문제도 거의 동일하여 라벨 처리를 제대로 못해주고 있긴하다만,
    지금은 조금 다른 문제에서 난관을 겪고 있음.
    - 데이터의 총 길이 값이 1,300,000 개로 이루워져 있어서 output 값을 지정할려면 1, 1300000으로 해줘야하나 메모리 할당에서 오류 발생
    - 멘탈이 나가뒤져가는데 일단 커밋은 해야할거 같다.
- Output size도 맞게 한거 같고 다 맞게 한거 같은데 이상하게 계속 안되고 있음. 원인을 알 수 없는 1로 인해 Output 사이즈가 자꾸 맞춰지지 않음.
    - 아ㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏ
h_bias를 제거함. 근데 다른 문제 생김.
->  0x167276600 <+928>: st1.4s { v0, v1 }, [x10], #32
    0x167276604 <+932>: add    x9, x22, #0x10
    0x167276608 <+936>: st1.4s { v2, v3 }, [x10]
    0x16727660c <+940>: add    x8, x8, #0x40
오버플로우남. 뒤질까
- 나는 멍청하다..
    - 진짜 멍청했다. 왜 backward를 하면 순서가 랜덤해질거라고 생각했지. 크기는 그ㅐㄹ..ㅇㅁ러민ㅇ러ㅏㅇ라어라ㅏㅓㅇ푸ㅠ유ㅜㅠㅜㅠㅜ유ㅜ류ㅜ유ㅜㅜㅠㅠㅜ 
 
may. 10. 2022 (b.insung)
- 아ㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏㅏ
취중코디ㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅣㅇㅇㅇㅇㅇㅇㅇㅇ이ㅣ잉이이ㅣㅣ이이ㅣ이이이이ㅣㅣㅇㅇ
죄송합니다. 정말 진짜......하 이럴거면 술을 왜 마신거지
- 취중 코딩 중에 일단 한 짓 정리는 하자곱곱ㄱ
    - 일단 리스트 그대로 때려박았더니 리스트에서 overflow 발생. 
```
->  0x1798ca0dc <+424>: stp    q1, q0, [x9, #-0x20]
    0x1798ca0e0 <+428>: stp    q3, q2, [x9], #0x40