@@ -396,10 +396,7 @@
     "\n",
     "        # tensor binary\n",
     "        vog_first, v1, mt = rbm_first(sample_data)\n",
-    "        \n",
-    "        # loss_first = rbm_first.free_energy(vog_first) - rbm_first.free_energy(v1)\n",
     "        omse_loss = mse_loss(vog_first, v1)\n",
-    "        # loss_.append(loss_first.data)\n",
     "\n",
     "        first_train_op.zero_grad()\n",
     "        first_train_op.step()\n",
@@ -415,7 +412,7 @@
    "outputs": [],
    "source": [
     "output_from_first = torch.tensor(output_from_first)\n",
-    "print(output_from_first)\n",
+    "print(output_from_first.size())\n",
     "\n",
     "for epoch in range(EPOCH):\n",
     "    '''Secnd bbrbm'''\n",
@@ -428,9 +425,6 @@
     "\n",
     "        # tensor binary\n",
     "        vog_second, v2, mt = rbm_second(sample_data)\n",
-    "        \n",
-    "        # loss_second = rbm_second.free_energy(vog_second) - rbm_second.free_energy(v2)\n",
-    "        # loss_.append(loss_second.data)\n",
     "        omse_loss = mse_loss(vog_second, v2)\n",
     "\n",
     "        second_train_op.zero_grad()\n",
@@ -449,24 +443,19 @@
    "source": [
     "output_from_second = torch.tensor(output_from_second)\n",
     "for epoch in range(EPOCH):\n",
-    "    '''Secnd bbrbm'''\n",
+    "    '''Third bbrbm'''\n",
     "    for _, (data) in enumerate(output_from_second):\n",
-    "        if i == 4:\n",
-    "            continue\n",
     "        data = Variable(\n",
     "                torch.tensor(data, dtype=torch.float32)\n",
     "        ).uniform_(0, 1)\n",
     "\n",
-    "        sample_data = torch.bernoulli(data)\n",
-    "        sample_data = torch.flatten(sample_data.clone())\n",
+    "        sample_data = torch.bernoulli(data).view(-1, 10)\n",
     "\n",
     "        vog_third, v3, mt = rbm_third(sample_data)\n",
-    "        \n",
-    "        loss_third = rbm_third.free_energy(vog_third) - rbm_third.free_energy(v3)\n",
-    "        loss_.append(loss_third.data)\n",
+    "        omse_loss = mse_loss(vog_third, v3)\n",
     "        \n",
     "        third_train_op.zero_grad()\n",
-    "        loss_third.backward()\n",
+    "        omse_loss.backward()\n",
     "        third_train_op.step()\n",
     "\n",
     "    output_from_third.append(v3)\n",
@@ -475,15 +464,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RBM' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/_8/q_cwh5hn0s1dxsrzq2d040p80000gn/T/ipykernel_66848/3427961492.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrbm_first\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRBM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_vis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVISIBLE_UNITS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_hid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mHIDDEN_UNITS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mK_FOLD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrbm_second\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRBM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_vis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVISIBLE_UNITS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_hid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mHIDDEN_UNITS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mK_FOLD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrbm_third\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRBM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_vis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVISIBLE_UNITS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_hid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mHIDDEN_UNITS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mK_FOLD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfirst_train_op\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrbm_first\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RBM' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "rbm_first = RBM(n_vis=VISIBLE_UNITS[0], n_hid=HIDDEN_UNITS[0], k=K_FOLD, batch=BATCH_SIZE)\n",
+    "rbm_second = RBM(n_vis=VISIBLE_UNITS[1], n_hid=HIDDEN_UNITS[1], k=K_FOLD, batch=BATCH_SIZE)\n",
+    "rbm_third = RBM(n_vis=VISIBLE_UNITS[2], n_hid=HIDDEN_UNITS[2], k=K_FOLD, batch=BATCH_SIZE)\n",
+    "\n",
+    "first_train_op = optim.SGD(rbm_first.parameters(), 0.1)\n",
+    "second_train_op = optim.SGD(rbm_second.parameters(), 0.1)\n",
+    "third_train_op = optim.SGD(rbm_third.parameters(), 0.1)\n",
+    "\n",
+    "gb_first_train_op = optim.SGD(rbm_first.parameters(), 0.1)\n",
+    "gb_second_train_op = optim.SGD(rbm_second.parameters(), 0.1)\n",
+    "gb_third_train_op = optim.SGD(rbm_third.parameters(), 0.1)\n",
+    "\n",
+    "output_from_first = list()\n",
+    "output_from_second = list()\n",
+    "output_from_third = list()\n",
+    "\n",
+    "omse_loss = list()\n",
+    "mse_loss = nn.MSELoss()\n",
+    "gaussian_std = torch.arange(1, 0, -0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "loss_ = []\n",
+    "for epoch in range(EPOCH):\n",
+    "    '''First bbrbm'''\n",
+    "    for i, (data) in enumerate(train_dataloader):\n",
+    "        data = Variable(\n",
+    "                torch.tensor(data, dtype=torch.float32)\n",
+    "        ).uniform_(0, 1)\n",
+    "        \n",
+    "        sample_data = torch.normal(mean=data, std=gaussian_std).view(-1, 10)\n",
+    "\n",
+    "        # tensor binary\n",
+    "        vog_first, v1, mt = rbm_first(sample_data)\n",
+    "        omse_loss = mse_loss(vog_first, v1)\n",
+    "\n",
+    "        first_train_op.zero_grad()\n",
+    "        first_train_op.step()\n",
+    "        omse_loss.backward()\n",
+    "    output_from_first.append(v1.tolist())\n",
+    "    print(\"1ST BBrbm_first Training loss for {0} epoch {1}\\tEstimate time : {2}\".format(epoch, omse_loss, mt))\n"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "6c3cabcf2f29820bdd7faae982b59d335e0d215fb5382d93f3312fa3292e9b7f"
+   "hash": "155d6f2e0f64686ab4bfd14ea62d28fe51bc71031495ea0caf798feb858e6597"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
