@@ -8,6 +8,7 @@ May. 13. 2022 (B. InSung)
 - Second BBRBM으로 변환 하는 과정 중에 확률 분포 에러 발생. 백업 커밋.
 - 사이즈 오류로 인해 생기는 모델 input data 오류 제거.
     - Second BBRBM 레이어를 통과시키는 것을 이제 주 목적.
+- BBRBM, GBRBM 설계 완료. 테스트 진행 예정. 커밋.
 
 May. 12. 2022 (B. InSung)
 - 내가 뭘 했는지는 몰라도 일단 뭐 되긴 된거 같다. 연산 중에 오류로 torch.mv 함수 내에서 벡터와 텐서 연산 오류 외에는 아직 큰 문제는 없음.
